--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <nav>
     <ol>
         <li>
-            <a href="http://127.0.0.1:5500/Element%201/Omere/SAMUEL.html">
+            <a href="http://Asola1707.github.io/Omere/SAMUEL.html">
                 <div class="chart-box">
                     <img src="Uyi_Samuel_Omere.jpeg" alt="Uyi Samuel Omere" class="member-img">
                     <div class="chart-name">Multiple Line Chart</div>
@@ -131,7 +131,7 @@
             </a>
         </li>
         <li>
-            <a href="http://127.0.0.1:5500/Element%201/Oyeranti/index.html">
+            <a href="http://Asola1707.github.io/Oyeranti/index.html">
                 <div class="chart-box">
                     <img src="Oyeranti_Oluwaseun.jpeg" alt="Oyeranti Oluwaseun" class="member-img">
                     <div class="chart-name">Scatter Plot</div>
@@ -140,7 +140,7 @@
             </a>
         </li>
         <li>
-            <a href="http://127.0.0.1:5500/Element%201/Suleiman/Fatima_Stacked_Column.html">
+            <a href="http://Asola1707.github.io/Suleiman/Fatima_Stacked_Column.html">
                 <div class="chart-box">
                     <img src="Suleiman_Fatima.jpeg" alt="Suleiman Fatima" class="member-img">
                     <div class="chart-name">Stacked Bar Chart</div>
@@ -149,7 +149,7 @@
             </a>
         </li>
         <li>
-            <a href="http://127.0.0.1:5500/Element%201/Okafor/World%20Temperature.html">
+            <a href="http://Asola1707.github.io/Okafor/World%20Temperature.html">
                 <div class="chart-box">
                     <img src="Okafor_Chukwuma.jpg" alt="Okafor Chukwuma" class="member-img">
                     <div class="chart-name">World Map</div>
