updated home links

--- a/Omere/SAMUEL.html
+++ b/Omere/SAMUEL.html
@@ -92,7 +92,7 @@
 </head>
 
 <body>
-    <nav><a href="../World%20Temperature%20Visualization.html">Home</a></nav>
+    <nav><a href="https://asola1707.github.io/">Home</a></nav>
     <div class="container">
         <div class="author">Uyi Samuel Omere / D3209619</div>
         
