--- a/Oyeranti/index.html
+++ b/Oyeranti/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     
-    <a href="../World%20Temperature%20Visualization.html" class="home-link">Home</a>
+    <a href="https://asola1707.github.io/" class="home-link">Home</a>
 
     <div class="description-container">
       <h1>
