--- a/Okafor/World Temperature.html
+++ b/Okafor/World Temperature.html
@@ -59,7 +59,7 @@
     </style>
 </head>
 <body>
-<nav><a href="../World%20Temperature%20Visualization.html">Home</a></nav>
+<nav><a href="https://asola1707.github.io/">Home</a></nav>
 <section id="student-details">
     <p>Chukwuma Okafor | D3041895</p>
 </section>
