--- a/Suleiman/Fatima_Stacked_Column.html
+++ b/Suleiman/Fatima_Stacked_Column.html
@@ -10,7 +10,7 @@
     <!-- <script src="http://d3js.org/topojson.v0.min.js"></script> -->
     <!--CSS rules go here */ -->
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <nav><a href="http://127.0.0.1:5500/Element%201/World%20Temperature%20Visualization.html">Home</a></nav>
+    <nav><a href="https://asola1707.github.io/">Home</a></nav>
 
    <style>
         .row {
