--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <nav>
     <ol>
         <li>
-            <a href="http://Asola1707.github.io/Omere/SAMUEL.html">
+            <a href="Omere/SAMUEL.html">
                 <div class="chart-box">
                     <img src="Uyi_Samuel_Omere.jpeg" alt="Uyi Samuel Omere" class="member-img">
                     <div class="chart-name">Multiple Line Chart</div>
