--- a/Suleiman/Fatima_Stacked_Column.html
+++ b/Suleiman/Fatima_Stacked_Column.html
@@ -8,9 +8,8 @@
     <!-- fetch the D3js library -->
     <script src="https://d3js.org/d3.v7.min.js" charset="utf-8"></script>
     <!-- <script src="http://d3js.org/topojson.v0.min.js"></script> -->
-    <!--CSS rules go here */ -->
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <nav><a href="https://asola1707.github.io/">Home</a></nav>
+    <nav><a href="../index.html">Home</a></nav>
 
    <style>
         .row {
